--- a/google-beta/services/cloudquotas/resource_cloud_quotas_quota_preference_generated_meta.yaml
+++ b/google-beta/services/cloudquotas/resource_cloud_quotas_quota_preference_generated_meta.yaml
@@ -1,5 +1,5 @@
 resource: 'google_cloud_quotas_quota_preference'
 generation_type: 'mmv1'
 api_service_name: 'cloudquotas.googleapis.com'
-api_version: 'v1'
+api_version: 'v1beta'
 api_resource_type_kind: 'QuotaPreference'
