--- a/google-beta/services/tpuv2/resource_tpu_v2_vm_generated_meta.yaml
+++ b/google-beta/services/tpuv2/resource_tpu_v2_vm_generated_meta.yaml
@@ -1,7 +1,7 @@
 resource: 'google_tpu_v2_vm'
 generation_type: 'mmv1'
 api_service_name: 'tpu.googleapis.com'
-api_version: 'v2'
+api_version: 'v2alpha1'
 api_resource_type_kind: 'Node'
 fields:
   - field: 'accelerator_config.topology'
