Backfill autogen status tag (#12987)
[upstream:1526680829320edf5ac73be20dfc9891dda2d966]

Signed-off-by: Modular Magician <magic-modules@google.com>

--- a/google-beta/services/chronicle/resource_chronicle_data_access_label_generated_meta.yaml
+++ b/google-beta/services/chronicle/resource_chronicle_data_access_label_generated_meta.yaml
@@ -4,6 +4,7 @@ source_file: 'products/chronicle/DataAccessLabel.yaml'
 api_service_name: 'chronicle.googleapis.com'
 api_version: 'v1beta'
 api_resource_type_kind: 'DataAccessLabel'
+autogen_status: true
 fields:
   - field: 'author'
   - field: 'create_time'
