--- a/google-beta/services/chronicle/resource_chronicle_retrohunt_generated_meta.yaml
+++ b/google-beta/services/chronicle/resource_chronicle_retrohunt_generated_meta.yaml
@@ -4,6 +4,7 @@ source_file: 'products/chronicle/Retrohunt.yaml'
 api_service_name: 'chronicle.googleapis.com'
 api_version: 'v1beta'
 api_resource_type_kind: 'Retrohunt'
+autogen_status: true
 fields:
   - field: 'execution_interval.end_time'
   - field: 'execution_interval.start_time'
