--- a/google-beta/services/chronicle/resource_chronicle_watchlist_generated_meta.yaml
+++ b/google-beta/services/chronicle/resource_chronicle_watchlist_generated_meta.yaml
@@ -4,6 +4,7 @@ source_file: 'products/chronicle/Watchlist.yaml'
 api_service_name: 'chronicle.googleapis.com'
 api_version: 'v1beta'
 api_resource_type_kind: 'Watchlist'
+autogen_status: true
 fields:
   - field: 'create_time'
   - field: 'description'
