Add location field to google_network_services_mesh (#12991)
[upstream:08ecbc91a487d44e280408dc6b2ea1f5139a6327]

Signed-off-by: Modular Magician <magic-modules@google.com>

--- a/google-beta/services/networkservices/resource_network_services_mesh_generated_meta.yaml
+++ b/google-beta/services/networkservices/resource_network_services_mesh_generated_meta.yaml
@@ -11,6 +11,8 @@ fields:
     provider_only: true
   - field: 'interception_port'
   - field: 'labels'
+  - field: 'location'
+    provider_only: true
   - field: 'name'
     provider_only: true
   - field: 'self_link'
