Add NetworkConfig to TPU v2 QueuedResource (#12482)
Co-authored-by: Stephen Lewis (Burrows) <stephen.r.burrows@gmail.com>

[upstream:7babab6dbe1faa3f859d33ceed7e35bad51ba82c]

Signed-off-by: Modular Magician <magic-modules@google.com>

--- a/google-beta/services/tpuv2/resource_tpu_v2_queued_resource_generated_meta.yaml
+++ b/google-beta/services/tpuv2/resource_tpu_v2_queued_resource_generated_meta.yaml
@@ -8,6 +8,11 @@ fields:
   - field: 'name'
   - field: 'tpu.node_spec.node.accelerator_type'
   - field: 'tpu.node_spec.node.description'
+  - field: 'tpu.node_spec.node.network_config.can_ip_forward'
+  - field: 'tpu.node_spec.node.network_config.enable_external_ips'
+  - field: 'tpu.node_spec.node.network_config.network'
+  - field: 'tpu.node_spec.node.network_config.queue_count'
+  - field: 'tpu.node_spec.node.network_config.subnetwork'
   - field: 'tpu.node_spec.node.runtime_version'
   - field: 'tpu.node_spec.node_id'
   - field: 'tpu.node_spec.parent'
