Fix api kind used in metadata for resources where data is not consistent (#13105)
[upstream:274ef62b90f6abccddb9046b8b583b56da5a5d42]

Signed-off-by: Modular Magician <magic-modules@google.com>

--- a/google-beta/services/artifactregistry/resource_artifact_registry_vpcsc_config_generated_meta.yaml
+++ b/google-beta/services/artifactregistry/resource_artifact_registry_vpcsc_config_generated_meta.yaml
@@ -3,7 +3,7 @@ generation_type: 'mmv1'
 source_file: 'products/artifactregistry/VPCSCConfig.yaml'
 api_service_name: 'artifactregistry.googleapis.com'
 api_version: 'v1'
-api_resource_type_kind: 'VpcscConfig'
+api_resource_type_kind: 'VPCSCConfig'
 fields:
   - field: 'location'
     provider_only: true
