--- a/google-beta/services/firebasedatabase/resource_firebase_database_instance_generated_meta.yaml
+++ b/google-beta/services/firebasedatabase/resource_firebase_database_instance_generated_meta.yaml
@@ -3,7 +3,7 @@ generation_type: 'mmv1'
 source_file: 'products/firebasedatabase/Instance.yaml'
 api_service_name: 'firebasedatabase.googleapis.com'
 api_version: 'v1beta'
-api_resource_type_kind: 'Instance'
+api_resource_type_kind: 'DatabaseInstance'
 fields:
   - field: 'database_url'
   - field: 'desired_state'
