--- a/google-beta/services/firebase/resource_firebase_project_generated_meta.yaml
+++ b/google-beta/services/firebase/resource_firebase_project_generated_meta.yaml
@@ -3,7 +3,7 @@ generation_type: 'mmv1'
 source_file: 'products/firebase/Project.yaml'
 api_service_name: 'firebase.googleapis.com'
 api_version: 'v1beta1'
-api_resource_type_kind: 'Project'
+api_resource_type_kind: 'FirebaseProject'
 fields:
   - field: 'display_name'
   - field: 'project_number'
