--- a/google-beta/services/compute/resource_compute_disk_generated_meta.yaml
+++ b/google-beta/services/compute/resource_compute_disk_generated_meta.yaml
@@ -6,6 +6,7 @@ api_version: 'beta'
 api_resource_type_kind: 'Disk'
 fields:
   - field: 'access_mode'
+  - field: 'architecture'
   - field: 'async_primary_disk.disk'
   - field: 'creation_timestamp'
   - field: 'description'
@@ -32,6 +33,7 @@ fields:
   - field: 'licenses'
   - field: 'multi_writer'
   - field: 'name'
+  - field: 'params.resource_manager_tags'
   - field: 'physical_block_size_bytes'
   - field: 'provisioned_iops'
   - field: 'provisioned_throughput'
@@ -48,12 +50,15 @@ fields:
   - field: 'source_image_encryption_key.raw_key'
   - field: 'source_image_encryption_key.sha256'
   - field: 'source_image_id'
+  - field: 'source_instant_snapshot'
+  - field: 'source_instant_snapshot_id'
   - field: 'source_snapshot_encryption_key.kms_key_self_link'
     api_field: 'source_snapshot_encryption_key.kms_key_name'
   - field: 'source_snapshot_encryption_key.kms_key_service_account'
   - field: 'source_snapshot_encryption_key.raw_key'
   - field: 'source_snapshot_encryption_key.sha256'
   - field: 'source_snapshot_id'
+  - field: 'source_storage_object'
   - field: 'storage_pool'
   - field: 'terraform_labels'
     provider_only: true
