Add location field to google_network_services_grpc_route (#13044)
[upstream:2cff717bf965bde785c89770ee7dedf75de0612b]

Signed-off-by: Modular Magician <magic-modules@google.com>

--- a/google-beta/services/networkservices/resource_network_services_grpc_route_generated_meta.yaml
+++ b/google-beta/services/networkservices/resource_network_services_grpc_route_generated_meta.yaml
@@ -12,6 +12,8 @@ fields:
   - field: 'gateways'
   - field: 'hostnames'
   - field: 'labels'
+  - field: 'location'
+    provider_only: true
   - field: 'meshes'
   - field: 'name'
     provider_only: true
