Adds resource manager tags field in Workstations cluster resource. (#13076)
Co-authored-by: Stephen Lewis (Burrows) <stephen.r.burrows@gmail.com>

[upstream:7fd3986dabe801d8d32ae1e958236028504e70d0]

Signed-off-by: Modular Magician <magic-modules@google.com>

--- a/google-beta/services/workstations/resource_workstations_workstation_cluster_generated_meta.yaml
+++ b/google-beta/services/workstations/resource_workstations_workstation_cluster_generated_meta.yaml
@@ -29,6 +29,7 @@ fields:
   - field: 'private_cluster_config.enable_private_endpoint'
   - field: 'private_cluster_config.service_attachment_uri'
   - field: 'subnetwork'
+  - field: 'tags'
   - field: 'terraform_labels'
     provider_only: true
   - field: 'uid'
