Add `description` field to intercept resources. (#13262)
[upstream:c721c74c72110cc330eef08932a4011e29beb0ca]

Signed-off-by: Modular Magician <magic-modules@google.com>

--- a/google-beta/services/networksecurity/resource_network_security_intercept_deployment_group_generated_meta.yaml
+++ b/google-beta/services/networksecurity/resource_network_security_intercept_deployment_group_generated_meta.yaml
@@ -7,6 +7,7 @@ api_resource_type_kind: 'InterceptDeploymentGroup'
 fields:
   - field: 'connected_endpoint_groups.name'
   - field: 'create_time'
+  - field: 'description'
   - field: 'effective_labels'
     provider_only: true
   - field: 'intercept_deployment_group_id'
