--- a/google-beta/services/networksecurity/resource_network_security_mirroring_deployment_group_generated_meta.yaml
+++ b/google-beta/services/networksecurity/resource_network_security_mirroring_deployment_group_generated_meta.yaml
@@ -7,6 +7,7 @@ api_resource_type_kind: 'MirroringDeploymentGroup'
 fields:
   - field: 'connected_endpoint_groups.name'
   - field: 'create_time'
+  - field: 'description'
   - field: 'effective_labels'
     provider_only: true
   - field: 'labels'
