--- a/google-beta/services/networksecurity/resource_network_security_mirroring_endpoint_group_generated_meta.yaml
+++ b/google-beta/services/networksecurity/resource_network_security_mirroring_endpoint_group_generated_meta.yaml
@@ -6,6 +6,7 @@ api_version: 'v1beta1'
 api_resource_type_kind: 'MirroringEndpointGroup'
 fields:
   - field: 'create_time'
+  - field: 'description'
   - field: 'effective_labels'
     provider_only: true
   - field: 'labels'
