Add SchedulingConfig.spot to TPU v2 VM (#13211)
[upstream:2d658fd4f5e9817fe1f2fe66af66e6f6fa5eed82]

Signed-off-by: Modular Magician <magic-modules@google.com>

--- a/google-beta/services/tpuv2/resource_tpu_v2_vm_generated_meta.yaml
+++ b/google-beta/services/tpuv2/resource_tpu_v2_vm_generated_meta.yaml
@@ -38,6 +38,7 @@ fields:
   - field: 'runtime_version'
   - field: 'scheduling_config.preemptible'
   - field: 'scheduling_config.reserved'
+  - field: 'scheduling_config.spot'
   - field: 'service_account.email'
   - field: 'service_account.scope'
   - field: 'shielded_instance_config.enable_secure_boot'
