Adds Datastream connection profile for Salesforce (#13195)
[upstream:e1b84e2ef0f30958a6f6006b51ea334aa4c06611]

Signed-off-by: Modular Magician <magic-modules@google.com>

--- a/google-beta/services/datastream/resource_datastream_connection_profile_generated_meta.yaml
+++ b/google-beta/services/datastream/resource_datastream_connection_profile_generated_meta.yaml
@@ -46,6 +46,15 @@ fields:
   - field: 'postgresql_profile.port'
   - field: 'postgresql_profile.username'
   - field: 'private_connectivity.private_connection'
+  - field: 'salesforce_profile.domain'
+  - field: 'salesforce_profile.oauth2_client_credentials.client_id'
+  - field: 'salesforce_profile.oauth2_client_credentials.client_secret'
+  - field: 'salesforce_profile.oauth2_client_credentials.secret_manager_stored_client_secret'
+  - field: 'salesforce_profile.user_credentials.password'
+  - field: 'salesforce_profile.user_credentials.secret_manager_stored_password'
+  - field: 'salesforce_profile.user_credentials.secret_manager_stored_security_token'
+  - field: 'salesforce_profile.user_credentials.security_token'
+  - field: 'salesforce_profile.user_credentials.username'
   - field: 'sql_server_profile.database'
   - field: 'sql_server_profile.hostname'
   - field: 'sql_server_profile.password'
