--- a/google-beta/services/compute/resource_compute_region_backend_service_generated_meta.yaml
+++ b/google-beta/services/compute/resource_compute_region_backend_service_generated_meta.yaml
@@ -90,6 +90,8 @@ fields:
   - field: 'load_balancing_scheme'
   - field: 'locality_lb_policy'
   - field: 'log_config.enable'
+  - field: 'log_config.optional_fields'
+  - field: 'log_config.optional_mode'
   - field: 'log_config.sample_rate'
   - field: 'name'
   - field: 'network'
