Add support for continuous query to google_bigquery_job in beta (#13279)
[upstream:5b1b17a471c0c5612d595d1b7fca54c19b107ada]

Signed-off-by: Modular Magician <magic-modules@google.com>

--- a/google-beta/services/bigquery/resource_bigquery_job_generated_meta.yaml
+++ b/google-beta/services/bigquery/resource_bigquery_job_generated_meta.yaml
@@ -60,6 +60,7 @@ fields:
   - field: 'configuration.load.time_partitioning.type'
   - field: 'configuration.load.write_disposition'
   - field: 'configuration.query.allow_large_results'
+  - field: 'configuration.query.continuous'
   - field: 'configuration.query.create_disposition'
   - field: 'configuration.query.default_dataset.dataset_id'
   - field: 'configuration.query.default_dataset.project_id'
