--- a/google-beta/services/dataprocmetastore/resource_dataproc_metastore_service_generated_meta.yaml
+++ b/google-beta/services/dataprocmetastore/resource_dataproc_metastore_service_generated_meta.yaml
@@ -6,6 +6,7 @@ api_version: 'v1beta'
 api_resource_type_kind: 'Service'
 fields:
   - field: 'artifact_gcs_uri'
+  - field: 'create_time'
   - field: 'database_type'
   - field: 'deletion_protection'
   - field: 'effective_labels'
@@ -51,3 +52,4 @@ fields:
     provider_only: true
   - field: 'tier'
   - field: 'uid'
+  - field: 'update_time'
