Feature gap: Add missed `enable_flow_logs` & `state` to subnetwork (#13093)
Signed-off-by: Cezary Sobczak <Cezary.Sobczak@infogain.com>

[upstream:7fe6b89e3bcd4c180198da7f5fd7405d968b91e8]

Signed-off-by: Modular Magician <magic-modules@google.com>

--- a/google-beta/services/compute/resource_compute_subnetwork_generated_meta.yaml
+++ b/google-beta/services/compute/resource_compute_subnetwork_generated_meta.yaml
@@ -8,6 +8,7 @@ fields:
   - field: 'allow_subnet_cidr_routes_overlap'
   - field: 'creation_timestamp'
   - field: 'description'
+  - field: 'enable_flow_logs'
   - field: 'external_ipv6_prefix'
   - field: 'gateway_address'
   - field: 'internal_ipv6_prefix'
@@ -38,5 +39,6 @@ fields:
   - field: 'send_secondary_ip_range_if_empty'
     provider_only: true
   - field: 'stack_type'
+  - field: 'state'
   - field: 'subnetwork_id'
     api_field: 'id'
