--- a/google-beta/services/dataform/resource_dataform_repository_generated_meta.yaml
+++ b/google-beta/services/dataform/resource_dataform_repository_generated_meta.yaml
@@ -5,6 +5,8 @@ api_service_name: 'dataform.googleapis.com'
 api_version: 'v1beta1'
 api_resource_type_kind: 'Repository'
 fields:
+  - field: 'deletion_policy'
+    provider_only: true
   - field: 'display_name'
   - field: 'effective_labels'
     provider_only: true
