Feature gap: Add `group_placement_policy.0.gpu_topology` field to ResourcePolicy (#13354)
Signed-off-by: Cezary Sobczak <Cezary.Sobczak@infogain.com>

[upstream:892f5136a4f767351b2d848fcc32c26206544b09]

Signed-off-by: Modular Magician <magic-modules@google.com>

--- a/google-beta/services/compute/resource_compute_resource_policy_generated_meta.yaml
+++ b/google-beta/services/compute/resource_compute_resource_policy_generated_meta.yaml
@@ -9,6 +9,7 @@ fields:
   - field: 'disk_consistency_group_policy.enabled'
   - field: 'group_placement_policy.availability_domain_count'
   - field: 'group_placement_policy.collocation'
+  - field: 'group_placement_policy.gpu_topology'
   - field: 'group_placement_policy.max_distance'
   - field: 'group_placement_policy.vm_count'
   - field: 'instance_schedule_policy.expiration_time'
