Reconcile Dataproc Metastore Autoscaling Configs w/ API status (#13325)
[upstream:5cafcdc10f44306a5c4441671b074120d91bcbf6]

Signed-off-by: Modular Magician <magic-modules@google.com>

--- a/google-beta/services/dataprocmetastore/resource_dataproc_metastore_service_generated_meta.yaml
+++ b/google-beta/services/dataprocmetastore/resource_dataproc_metastore_service_generated_meta.yaml
@@ -35,6 +35,7 @@ fields:
   - field: 'port'
   - field: 'release_channel'
   - field: 'scaling_config.autoscaling_config.autoscaling_enabled'
+  - field: 'scaling_config.autoscaling_config.autoscaling_factor'
   - field: 'scaling_config.autoscaling_config.limit_config.max_scaling_factor'
   - field: 'scaling_config.autoscaling_config.limit_config.min_scaling_factor'
   - field: 'scaling_config.instance_size'
