--- a/google-beta/services/networksecurity/resource_network_security_intercept_deployment_group_generated_meta.yaml
+++ b/google-beta/services/networksecurity/resource_network_security_intercept_deployment_group_generated_meta.yaml
@@ -15,6 +15,8 @@ fields:
   - field: 'labels'
   - field: 'location'
     provider_only: true
+  - field: 'locations.location'
+  - field: 'locations.state'
   - field: 'name'
   - field: 'network'
   - field: 'reconciling'
