--- a/google-beta/services/networksecurity/resource_network_security_intercept_endpoint_group_generated_meta.yaml
+++ b/google-beta/services/networksecurity/resource_network_security_intercept_endpoint_group_generated_meta.yaml
@@ -5,6 +5,12 @@ api_service_name: 'networksecurity.googleapis.com'
 api_version: 'v1beta1'
 api_resource_type_kind: 'InterceptEndpointGroup'
 fields:
+  - field: 'associations.name'
+  - field: 'associations.network'
+  - field: 'associations.state'
+  - field: 'connected_deployment_group.locations.location'
+  - field: 'connected_deployment_group.locations.state'
+  - field: 'connected_deployment_group.name'
   - field: 'create_time'
   - field: 'description'
   - field: 'effective_labels'
