Feature gap: Add `workload_policy` field (#13341)
Signed-off-by: Cezary Sobczak <Cezary.Sobczak@infogain.com>

[upstream:a47bdc51b413d33c8d872b186b9f96d8a7dd64da]

Signed-off-by: Modular Magician <magic-modules@google.com>

--- a/google-beta/services/compute/resource_compute_resource_policy_generated_meta.yaml
+++ b/google-beta/services/compute/resource_compute_resource_policy_generated_meta.yaml
@@ -31,3 +31,6 @@ fields:
   - field: 'snapshot_schedule_policy.snapshot_properties.guest_flush'
   - field: 'snapshot_schedule_policy.snapshot_properties.labels'
   - field: 'snapshot_schedule_policy.snapshot_properties.storage_locations'
+  - field: 'workload_policy.accelerator_topology'
+  - field: 'workload_policy.max_topology_distance'
+  - field: 'workload_policy.type'
