--- a/google-beta/services/networksecurity/resource_network_security_intercept_endpoint_group_association_generated_meta.yaml
+++ b/google-beta/services/networksecurity/resource_network_security_intercept_endpoint_group_association_generated_meta.yaml
@@ -14,6 +14,8 @@ fields:
   - field: 'labels'
   - field: 'location'
     provider_only: true
+  - field: 'locations.location'
+  - field: 'locations.state'
   - field: 'locations_details.location'
   - field: 'locations_details.state'
   - field: 'name'
