--- a/google-beta/services/datafusion/resource_data_fusion_instance_generated_meta.yaml
+++ b/google-beta/services/datafusion/resource_data_fusion_instance_generated_meta.yaml
@@ -38,6 +38,7 @@ fields:
   - field: 'service_endpoint'
   - field: 'state'
   - field: 'state_message'
+  - field: 'tags'
   - field: 'tenant_project_id'
   - field: 'terraform_labels'
     provider_only: true
