Add support for GPU redundancy to Cloud Run v2 service (#13343)
[upstream:a0c93dbb641a1cd7b3cc792629e289a73072b61a]

Signed-off-by: Modular Magician <magic-modules@google.com>

--- a/google-beta/services/cloudrunv2/resource_cloud_run_v2_service_generated_meta.yaml
+++ b/google-beta/services/cloudrunv2/resource_cloud_run_v2_service_generated_meta.yaml
@@ -102,6 +102,7 @@ fields:
   - field: 'template.containers.working_dir'
   - field: 'template.encryption_key'
   - field: 'template.execution_environment'
+  - field: 'template.gpu_zonal_redundancy_disabled'
   - field: 'template.labels'
   - field: 'template.max_instance_request_concurrency'
   - field: 'template.node_selector.accelerator'
