Add pathMatchers[].routeRules[].customErrorResponsePolicy field to google_compute_url_map (#13429)
[upstream:3cf5722c84846080571d5d9e8de265f8e28c5369]

Signed-off-by: Modular Magician <magic-modules@google.com>

--- a/google-beta/services/compute/resource_compute_url_map_generated_meta.yaml
+++ b/google-beta/services/compute/resource_compute_url_map_generated_meta.yaml
@@ -275,6 +275,14 @@ fields:
     api_field: 'path_matchers.path_rules.url_redirect.redirect_response_code'
   - field: 'path_matcher.path_rule.url_redirect.strip_query'
     api_field: 'path_matchers.path_rules.url_redirect.strip_query'
+  - field: 'path_matcher.route_rules.custom_error_response_policy.error_response_rule.match_response_codes'
+    api_field: 'path_matchers.route_rules.custom_error_response_policy.error_response_rules.match_response_codes'
+  - field: 'path_matcher.route_rules.custom_error_response_policy.error_response_rule.override_response_code'
+    api_field: 'path_matchers.route_rules.custom_error_response_policy.error_response_rules.override_response_code'
+  - field: 'path_matcher.route_rules.custom_error_response_policy.error_response_rule.path'
+    api_field: 'path_matchers.route_rules.custom_error_response_policy.error_response_rules.path'
+  - field: 'path_matcher.route_rules.custom_error_response_policy.error_service'
+    api_field: 'path_matchers.route_rules.custom_error_response_policy.error_service'
   - field: 'path_matcher.route_rules.header_action.request_headers_to_add.header_name'
     api_field: 'path_matchers.route_rules.header_action.request_headers_to_add.header_name'
   - field: 'path_matcher.route_rules.header_action.request_headers_to_add.header_value'
