Add enable_advanced_cluster to VMware user and  admin cluster resources. (#13493)
[upstream:9e4bd2c7de6bfa52368727cc90e9c8c0a61edeb4]

Signed-off-by: Modular Magician <magic-modules@google.com>

--- a/google-beta/services/gkeonprem/resource_gkeonprem_vmware_admin_cluster_generated_meta.yaml
+++ b/google-beta/services/gkeonprem/resource_gkeonprem_vmware_admin_cluster_generated_meta.yaml
@@ -18,6 +18,7 @@ fields:
   - field: 'description'
   - field: 'effective_annotations'
     provider_only: true
+  - field: 'enable_advanced_cluster'
   - field: 'endpoint'
   - field: 'etag'
   - field: 'fleet.membership'
