Feature gap: Add `groupPlacementPolicy.tpuTopology` (#13398)
Signed-off-by: Cezary Sobczak <Cezary.Sobczak@infogain.com>

[upstream:d4fa3795a564c05d65c6dfa36397008b3d4ff5fa]

Signed-off-by: Modular Magician <magic-modules@google.com>

--- a/google-beta/services/compute/resource_compute_resource_policy_generated_meta.yaml
+++ b/google-beta/services/compute/resource_compute_resource_policy_generated_meta.yaml
@@ -11,6 +11,7 @@ fields:
   - field: 'group_placement_policy.collocation'
   - field: 'group_placement_policy.gpu_topology'
   - field: 'group_placement_policy.max_distance'
+  - field: 'group_placement_policy.tpu_topology'
   - field: 'group_placement_policy.vm_count'
   - field: 'instance_schedule_policy.expiration_time'
   - field: 'instance_schedule_policy.start_time'
