Added IAP Enable/Disable flag in cloudrunv2 service. (#13575)
[upstream:6042c8c999bb48c56a563ca81553df4b881316f4]

Signed-off-by: Modular Magician <magic-modules@google.com>

--- a/google-beta/services/cloudrunv2/resource_cloud_run_v2_service_generated_meta.yaml
+++ b/google-beta/services/cloudrunv2/resource_cloud_run_v2_service_generated_meta.yaml
@@ -43,6 +43,7 @@ fields:
   - field: 'etag'
   - field: 'expire_time'
   - field: 'generation'
+  - field: 'iap_enabled'
   - field: 'ingress'
   - field: 'invoker_iam_disabled'
   - field: 'labels'
