Add assistiveExperiencesEnabled to observability config (#13680)
[upstream:e86065da4393b10a1a9c1f5cc97317f7a4472748]

Signed-off-by: Modular Magician <magic-modules@google.com>

--- a/google-beta/services/alloydb/resource_alloydb_instance_generated_meta.yaml
+++ b/google-beta/services/alloydb/resource_alloydb_instance_generated_meta.yaml
@@ -30,6 +30,7 @@ fields:
   - field: 'network_config.authorized_external_networks.cidr_range'
   - field: 'network_config.enable_outbound_public_ip'
   - field: 'network_config.enable_public_ip'
+  - field: 'observability_config.assistive_experiences_enabled'
   - field: 'observability_config.enabled'
   - field: 'observability_config.max_query_string_length'
   - field: 'observability_config.preserve_comments'
