Update ManagedZone.yaml and add domain name to forwarding config and make ipv4Address optional (#13182)
[upstream:59d9456a4f0f196e1d7611d2246b81ffa1f57542]

Signed-off-by: Modular Magician <magic-modules@google.com>

--- a/google-beta/services/dns/resource_dns_managed_zone_generated_meta.yaml
+++ b/google-beta/services/dns/resource_dns_managed_zone_generated_meta.yaml
@@ -20,6 +20,7 @@ fields:
     provider_only: true
   - field: 'force_destroy'
     provider_only: true
+  - field: 'forwarding_config.target_name_servers.domain_name'
   - field: 'forwarding_config.target_name_servers.forwarding_path'
   - field: 'forwarding_config.target_name_servers.ipv4_address'
   - field: 'labels'
