Feature/add grpc_with_tls field for healthcheck resource (#13608)
[upstream:f191f35a39f8c4630b7fc0af4cf78c3f97193336]

Signed-off-by: Modular Magician <magic-modules@google.com>

--- a/google-beta/services/compute/resource_compute_health_check_generated_meta.yaml
+++ b/google-beta/services/compute/resource_compute_health_check_generated_meta.yaml
@@ -14,6 +14,9 @@ fields:
   - field: 'grpc_health_check.port'
   - field: 'grpc_health_check.port_name'
   - field: 'grpc_health_check.port_specification'
+  - field: 'grpc_tls_health_check.grpc_service_name'
+  - field: 'grpc_tls_health_check.port'
+  - field: 'grpc_tls_health_check.port_specification'
   - field: 'healthy_threshold'
   - field: 'http2_health_check.host'
   - field: 'http2_health_check.port'
