--- a/google-beta/services/alloydb/resource_alloydb_instance_generated_meta.yaml
+++ b/google-beta/services/alloydb/resource_alloydb_instance_generated_meta.yaml
@@ -41,6 +41,11 @@ fields:
   - field: 'observability_config.track_wait_events'
   - field: 'outbound_public_ip_addresses'
   - field: 'psc_instance_config.allowed_consumer_projects'
+  - field: 'psc_instance_config.psc_auto_connections.consumer_network'
+  - field: 'psc_instance_config.psc_auto_connections.consumer_network_status'
+  - field: 'psc_instance_config.psc_auto_connections.consumer_project'
+  - field: 'psc_instance_config.psc_auto_connections.ip_address'
+  - field: 'psc_instance_config.psc_auto_connections.status'
   - field: 'psc_instance_config.psc_dns_name'
   - field: 'psc_instance_config.psc_interface_configs.network_attachment_resource'
   - field: 'psc_instance_config.service_attachment_link'
