--- a/google-beta/services/iambeta/resource_iam_workload_identity_pool_generated_meta.yaml
+++ b/google-beta/services/iambeta/resource_iam_workload_identity_pool_generated_meta.yaml
@@ -8,6 +8,12 @@ fields:
   - field: 'description'
   - field: 'disabled'
   - field: 'display_name'
+  - field: 'inline_certificate_issuance_config.ca_pools'
+  - field: 'inline_certificate_issuance_config.key_algorithm'
+  - field: 'inline_certificate_issuance_config.lifetime'
+  - field: 'inline_certificate_issuance_config.rotation_window_percentage'
+  - field: 'inline_trust_config.additional_trust_bundles.trust_store.trust_anchors.pem_certificate'
+  - field: 'mode'
   - field: 'name'
   - field: 'state'
   - field: 'workload_identity_pool_id'
