Feature gap: Add missed fields to `BackendService` and `RegionBackendService` (#13821)
Signed-off-by: Cezary Sobczak <Cezary.Sobczak@infogain.com>

[upstream:5565f66a4112e5f43105b8140f28c754f957c8f5]

Signed-off-by: Modular Magician <magic-modules@google.com>

--- a/google-beta/services/compute/resource_compute_region_backend_service_generated_meta.yaml
+++ b/google-beta/services/compute/resource_compute_region_backend_service_generated_meta.yaml
@@ -74,6 +74,7 @@ fields:
   - field: 'custom_metrics.dry_run'
   - field: 'custom_metrics.name'
   - field: 'description'
+  - field: 'dynamic_forwarding.ip_port_selection.enabled'
   - field: 'enable_cdn'
   - field: 'failover_policy.disable_connection_drain_on_failover'
   - field: 'failover_policy.drop_traffic_if_unhealthy'
@@ -118,4 +119,5 @@ fields:
   - field: 'strong_session_affinity_cookie.ttl.nanos'
   - field: 'strong_session_affinity_cookie.ttl.seconds'
   - field: 'subsetting.policy'
+  - field: 'subsetting.subset_size'
   - field: 'timeout_sec'
