--- a/google-beta/services/compute/resource_compute_backend_service_generated_meta.yaml
+++ b/google-beta/services/compute/resource_compute_backend_service_generated_meta.yaml
@@ -76,6 +76,7 @@ fields:
   - field: 'custom_request_headers'
   - field: 'custom_response_headers'
   - field: 'description'
+  - field: 'dynamic_forwarding.ip_port_selection.enabled'
   - field: 'edge_security_policy'
   - field: 'enable_cdn'
   - field: 'external_managed_migration_state'
@@ -101,6 +102,8 @@ fields:
   - field: 'max_stream_duration.nanos'
   - field: 'max_stream_duration.seconds'
   - field: 'name'
+  - field: 'network_pass_through_lb_traffic_policy.zonal_affinity.spillover'
+  - field: 'network_pass_through_lb_traffic_policy.zonal_affinity.spillover_ratio'
   - field: 'outlier_detection.base_ejection_time.nanos'
   - field: 'outlier_detection.base_ejection_time.seconds'
   - field: 'outlier_detection.consecutive_errors'
