Add PSC fields to Filestore instance in beta (#13883)
[upstream:d971f7b0ae94ecca883f31345c1a43d1c327407a]

Signed-off-by: Modular Magician <magic-modules@google.com>

--- a/google-beta/services/filestore/resource_filestore_instance_generated_meta.yaml
+++ b/google-beta/services/filestore/resource_filestore_instance_generated_meta.yaml
@@ -28,6 +28,7 @@ fields:
   - field: 'file_shares.nfs_export_options.anon_gid'
   - field: 'file_shares.nfs_export_options.anon_uid'
   - field: 'file_shares.nfs_export_options.ip_ranges'
+  - field: 'file_shares.nfs_export_options.network'
   - field: 'file_shares.nfs_export_options.squash_mode'
   - field: 'file_shares.source_backup'
   - field: 'initial_replication.replicas.peer_instance'
@@ -44,6 +45,7 @@ fields:
   - field: 'networks.ip_addresses'
   - field: 'networks.modes'
   - field: 'networks.network'
+  - field: 'networks.psc_config.endpoint_project'
   - field: 'networks.reserved_ip_range'
   - field: 'performance_config.fixed_iops.max_iops'
   - field: 'performance_config.iops_per_tb.max_iops_per_tb'
