--- a/google-beta/services/compute/resource_compute_url_map_generated_meta.yaml
+++ b/google-beta/services/compute/resource_compute_url_map_generated_meta.yaml
@@ -29,6 +29,7 @@ fields:
   - field: 'default_route_action.max_stream_duration.nanos'
   - field: 'default_route_action.max_stream_duration.seconds'
   - field: 'default_route_action.request_mirror_policy.backend_service'
+  - field: 'default_route_action.request_mirror_policy.mirror_percent'
   - field: 'default_route_action.retry_policy.num_retries'
   - field: 'default_route_action.retry_policy.per_try_timeout.nanos'
   - field: 'default_route_action.retry_policy.per_try_timeout.seconds'
@@ -113,6 +114,8 @@ fields:
     api_field: 'path_matchers.default_route_action.max_stream_duration.seconds'
   - field: 'path_matcher.default_route_action.request_mirror_policy.backend_service'
     api_field: 'path_matchers.default_route_action.request_mirror_policy.backend_service'
+  - field: 'path_matcher.default_route_action.request_mirror_policy.mirror_percent'
+    api_field: 'path_matchers.default_route_action.request_mirror_policy.mirror_percent'
   - field: 'path_matcher.default_route_action.retry_policy.num_retries'
     api_field: 'path_matchers.default_route_action.retry_policy.num_retries'
   - field: 'path_matcher.default_route_action.retry_policy.per_try_timeout.nanos'
@@ -225,6 +228,8 @@ fields:
     api_field: 'path_matchers.path_rules.route_action.max_stream_duration.seconds'
   - field: 'path_matcher.path_rule.route_action.request_mirror_policy.backend_service'
     api_field: 'path_matchers.path_rules.route_action.request_mirror_policy.backend_service'
+  - field: 'path_matcher.path_rule.route_action.request_mirror_policy.mirror_percent'
+    api_field: 'path_matchers.path_rules.route_action.request_mirror_policy.mirror_percent'
   - field: 'path_matcher.path_rule.route_action.retry_policy.num_retries'
     api_field: 'path_matchers.path_rules.route_action.retry_policy.num_retries'
   - field: 'path_matcher.path_rule.route_action.retry_policy.per_try_timeout.nanos'
@@ -375,6 +380,8 @@ fields:
     api_field: 'path_matchers.route_rules.route_action.max_stream_duration.seconds'
   - field: 'path_matcher.route_rules.route_action.request_mirror_policy.backend_service'
     api_field: 'path_matchers.route_rules.route_action.request_mirror_policy.backend_service'
+  - field: 'path_matcher.route_rules.route_action.request_mirror_policy.mirror_percent'
+    api_field: 'path_matchers.route_rules.route_action.request_mirror_policy.mirror_percent'
   - field: 'path_matcher.route_rules.route_action.retry_policy.num_retries'
     api_field: 'path_matchers.route_rules.route_action.retry_policy.num_retries'
   - field: 'path_matcher.route_rules.route_action.retry_policy.per_try_timeout.nanos'
