--- a/google-beta/services/compute/resource_compute_interconnect_attachment_generated_meta.yaml
+++ b/google-beta/services/compute/resource_compute_interconnect_attachment_generated_meta.yaml
@@ -7,6 +7,10 @@ api_resource_type_kind: 'InterconnectAttachment'
 fields:
   - field: 'admin_enabled'
   - field: 'bandwidth'
+  - field: 'candidate_cloud_router_ip_address'
+  - field: 'candidate_cloud_router_ipv6_address'
+  - field: 'candidate_customer_router_ip_address'
+  - field: 'candidate_customer_router_ipv6_address'
   - field: 'candidate_subnets'
   - field: 'cloud_router_ip_address'
   - field: 'cloud_router_ipv6_address'
