Add httpFilterConfigs and httpFilterMetadata fields to route rules in URL maps. (#14097)
[upstream:10a629e9b64c1090b18c9cb5a21eba0acb1db168]

Signed-off-by: Modular Magician <magic-modules@google.com>

--- a/google-beta/services/compute/resource_compute_url_map_generated_meta.yaml
+++ b/google-beta/services/compute/resource_compute_url_map_generated_meta.yaml
@@ -304,6 +304,18 @@ fields:
     api_field: 'path_matchers.route_rules.header_action.response_headers_to_add.replace'
   - field: 'path_matcher.route_rules.header_action.response_headers_to_remove'
     api_field: 'path_matchers.route_rules.header_action.response_headers_to_remove'
+  - field: 'path_matcher.route_rules.http_filter_configs.config'
+    api_field: 'path_matchers.route_rules.http_filter_configs.config'
+  - field: 'path_matcher.route_rules.http_filter_configs.config_type_url'
+    api_field: 'path_matchers.route_rules.http_filter_configs.config_type_url'
+  - field: 'path_matcher.route_rules.http_filter_configs.filter_name'
+    api_field: 'path_matchers.route_rules.http_filter_configs.filter_name'
+  - field: 'path_matcher.route_rules.http_filter_metadata.config'
+    api_field: 'path_matchers.route_rules.http_filter_metadata.config'
+  - field: 'path_matcher.route_rules.http_filter_metadata.config_type_url'
+    api_field: 'path_matchers.route_rules.http_filter_metadata.config_type_url'
+  - field: 'path_matcher.route_rules.http_filter_metadata.filter_name'
+    api_field: 'path_matchers.route_rules.http_filter_metadata.filter_name'
   - field: 'path_matcher.route_rules.match_rules.full_path_match'
     api_field: 'path_matchers.route_rules.match_rules.full_path_match'
   - field: 'path_matcher.route_rules.match_rules.header_matches.exact_match'
