add default_route_action to regional url map under path_matcher (#14081)
Co-authored-by: Riley Karson <rileykarson@google.com>

[upstream:9d9055083097647aad88f731351ff9a8e91d1c2b]

Signed-off-by: Modular Magician <magic-modules@google.com>

--- a/google-beta/services/compute/resource_compute_region_url_map_generated_meta.yaml
+++ b/google-beta/services/compute/resource_compute_region_url_map_generated_meta.yaml
@@ -56,6 +56,76 @@ fields:
   - field: 'map_id'
     api_field: 'id'
   - field: 'name'
+  - field: 'path_matcher.default_route_action.cors_policy.allow_credentials'
+    api_field: 'path_matchers.default_route_action.cors_policy.allow_credentials'
+  - field: 'path_matcher.default_route_action.cors_policy.allow_headers'
+    api_field: 'path_matchers.default_route_action.cors_policy.allow_headers'
+  - field: 'path_matcher.default_route_action.cors_policy.allow_methods'
+    api_field: 'path_matchers.default_route_action.cors_policy.allow_methods'
+  - field: 'path_matcher.default_route_action.cors_policy.allow_origin_regexes'
+    api_field: 'path_matchers.default_route_action.cors_policy.allow_origin_regexes'
+  - field: 'path_matcher.default_route_action.cors_policy.allow_origins'
+    api_field: 'path_matchers.default_route_action.cors_policy.allow_origins'
+  - field: 'path_matcher.default_route_action.cors_policy.disabled'
+    api_field: 'path_matchers.default_route_action.cors_policy.disabled'
+  - field: 'path_matcher.default_route_action.cors_policy.expose_headers'
+    api_field: 'path_matchers.default_route_action.cors_policy.expose_headers'
+  - field: 'path_matcher.default_route_action.cors_policy.max_age'
+    api_field: 'path_matchers.default_route_action.cors_policy.max_age'
+  - field: 'path_matcher.default_route_action.fault_injection_policy.abort.http_status'
+    api_field: 'path_matchers.default_route_action.fault_injection_policy.abort.http_status'
+  - field: 'path_matcher.default_route_action.fault_injection_policy.abort.percentage'
+    api_field: 'path_matchers.default_route_action.fault_injection_policy.abort.percentage'
+  - field: 'path_matcher.default_route_action.fault_injection_policy.delay.fixed_delay.nanos'
+    api_field: 'path_matchers.default_route_action.fault_injection_policy.delay.fixed_delay.nanos'
+  - field: 'path_matcher.default_route_action.fault_injection_policy.delay.fixed_delay.seconds'
+    api_field: 'path_matchers.default_route_action.fault_injection_policy.delay.fixed_delay.seconds'
+  - field: 'path_matcher.default_route_action.fault_injection_policy.delay.percentage'
+    api_field: 'path_matchers.default_route_action.fault_injection_policy.delay.percentage'
+  - field: 'path_matcher.default_route_action.max_stream_duration.nanos'
+    api_field: 'path_matchers.default_route_action.max_stream_duration.nanos'
+  - field: 'path_matcher.default_route_action.max_stream_duration.seconds'
+    api_field: 'path_matchers.default_route_action.max_stream_duration.seconds'
+  - field: 'path_matcher.default_route_action.request_mirror_policy.backend_service'
+    api_field: 'path_matchers.default_route_action.request_mirror_policy.backend_service'
+  - field: 'path_matcher.default_route_action.retry_policy.num_retries'
+    api_field: 'path_matchers.default_route_action.retry_policy.num_retries'
+  - field: 'path_matcher.default_route_action.retry_policy.per_try_timeout.nanos'
+    api_field: 'path_matchers.default_route_action.retry_policy.per_try_timeout.nanos'
+  - field: 'path_matcher.default_route_action.retry_policy.per_try_timeout.seconds'
+    api_field: 'path_matchers.default_route_action.retry_policy.per_try_timeout.seconds'
+  - field: 'path_matcher.default_route_action.retry_policy.retry_conditions'
+    api_field: 'path_matchers.default_route_action.retry_policy.retry_conditions'
+  - field: 'path_matcher.default_route_action.timeout.nanos'
+    api_field: 'path_matchers.default_route_action.timeout.nanos'
+  - field: 'path_matcher.default_route_action.timeout.seconds'
+    api_field: 'path_matchers.default_route_action.timeout.seconds'
+  - field: 'path_matcher.default_route_action.url_rewrite.host_rewrite'
+    api_field: 'path_matchers.default_route_action.url_rewrite.host_rewrite'
+  - field: 'path_matcher.default_route_action.url_rewrite.path_prefix_rewrite'
+    api_field: 'path_matchers.default_route_action.url_rewrite.path_prefix_rewrite'
+  - field: 'path_matcher.default_route_action.url_rewrite.path_template_rewrite'
+    api_field: 'path_matchers.default_route_action.url_rewrite.path_template_rewrite'
+  - field: 'path_matcher.default_route_action.weighted_backend_services.backend_service'
+    api_field: 'path_matchers.default_route_action.weighted_backend_services.backend_service'
+  - field: 'path_matcher.default_route_action.weighted_backend_services.header_action.request_headers_to_add.header_name'
+    api_field: 'path_matchers.default_route_action.weighted_backend_services.header_action.request_headers_to_add.header_name'
+  - field: 'path_matcher.default_route_action.weighted_backend_services.header_action.request_headers_to_add.header_value'
+    api_field: 'path_matchers.default_route_action.weighted_backend_services.header_action.request_headers_to_add.header_value'
+  - field: 'path_matcher.default_route_action.weighted_backend_services.header_action.request_headers_to_add.replace'
+    api_field: 'path_matchers.default_route_action.weighted_backend_services.header_action.request_headers_to_add.replace'
+  - field: 'path_matcher.default_route_action.weighted_backend_services.header_action.request_headers_to_remove'
+    api_field: 'path_matchers.default_route_action.weighted_backend_services.header_action.request_headers_to_remove'
+  - field: 'path_matcher.default_route_action.weighted_backend_services.header_action.response_headers_to_add.header_name'
+    api_field: 'path_matchers.default_route_action.weighted_backend_services.header_action.response_headers_to_add.header_name'
+  - field: 'path_matcher.default_route_action.weighted_backend_services.header_action.response_headers_to_add.header_value'
+    api_field: 'path_matchers.default_route_action.weighted_backend_services.header_action.response_headers_to_add.header_value'
+  - field: 'path_matcher.default_route_action.weighted_backend_services.header_action.response_headers_to_add.replace'
+    api_field: 'path_matchers.default_route_action.weighted_backend_services.header_action.response_headers_to_add.replace'
+  - field: 'path_matcher.default_route_action.weighted_backend_services.header_action.response_headers_to_remove'
+    api_field: 'path_matchers.default_route_action.weighted_backend_services.header_action.response_headers_to_remove'
+  - field: 'path_matcher.default_route_action.weighted_backend_services.weight'
+    api_field: 'path_matchers.default_route_action.weighted_backend_services.weight'
   - field: 'path_matcher.default_service'
     api_field: 'path_matchers.default_service'
   - field: 'path_matcher.default_url_redirect.host_redirect'
