Adding support for log_linked_dataset_query_user_email attribute for BigQuery Analytics Hub listings. (#14225)
[upstream:cf25ab930f3bb6688ee4210ab137142b69c4da70]

Signed-off-by: Modular Magician <magic-modules@google.com>

--- a/google-beta/services/bigqueryanalyticshub/resource_bigquery_analytics_hub_listing_generated_meta.yaml
+++ b/google-beta/services/bigqueryanalyticshub/resource_bigquery_analytics_hub_listing_generated_meta.yaml
@@ -20,6 +20,7 @@ fields:
     provider_only: true
   - field: 'location'
     provider_only: true
+  - field: 'log_linked_dataset_query_user_email'
   - field: 'name'
   - field: 'primary_contact'
   - field: 'publisher.name'
