--- a/google-beta/services/bigqueryanalyticshub/resource_bigquery_analytics_hub_listing_subscription_generated_meta.yaml
+++ b/google-beta/services/bigqueryanalyticshub/resource_bigquery_analytics_hub_listing_subscription_generated_meta.yaml
@@ -23,6 +23,7 @@ fields:
     provider_only: true
   - field: 'location'
     provider_only: true
+  - field: 'log_linked_dataset_query_user_email'
   - field: 'name'
   - field: 'organization_display_name'
   - field: 'organization_id'
