--- a/google-beta/services/dataplex/resource_dataplex_datascan_generated_meta.yaml
+++ b/google-beta/services/dataplex/resource_dataplex_datascan_generated_meta.yaml
@@ -8,6 +8,19 @@ fields:
   - field: 'create_time'
   - field: 'data.entity'
   - field: 'data.resource'
+  - field: 'data_discovery_spec.bigquery_publishing_config.connection'
+  - field: 'data_discovery_spec.bigquery_publishing_config.location'
+  - field: 'data_discovery_spec.bigquery_publishing_config.project'
+  - field: 'data_discovery_spec.bigquery_publishing_config.table_type'
+  - field: 'data_discovery_spec.storage_config.csv_options.delimiter'
+  - field: 'data_discovery_spec.storage_config.csv_options.encoding'
+  - field: 'data_discovery_spec.storage_config.csv_options.header_rows'
+  - field: 'data_discovery_spec.storage_config.csv_options.quote'
+  - field: 'data_discovery_spec.storage_config.csv_options.type_inference_disabled'
+  - field: 'data_discovery_spec.storage_config.exclude_patterns'
+  - field: 'data_discovery_spec.storage_config.include_patterns'
+  - field: 'data_discovery_spec.storage_config.json_options.encoding'
+  - field: 'data_discovery_spec.storage_config.json_options.type_inference_disabled'
   - field: 'data_profile_spec.exclude_fields.field_names'
   - field: 'data_profile_spec.include_fields.field_names'
   - field: 'data_profile_spec.post_scan_actions.bigquery_export.results_table'
