Add Pub/Sub Topic Source Support to Analytics Hub Listing (#14302)
[upstream:a6026d82fbfc30149a93d5df6375514c077b1f5b]

Signed-off-by: Modular Magician <magic-modules@google.com>

--- a/google-beta/services/bigqueryanalyticshub/resource_bigquery_analytics_hub_listing_generated_meta.yaml
+++ b/google-beta/services/bigqueryanalyticshub/resource_bigquery_analytics_hub_listing_generated_meta.yaml
@@ -25,6 +25,8 @@ fields:
   - field: 'primary_contact'
   - field: 'publisher.name'
   - field: 'publisher.primary_contact'
+  - field: 'pubsub_topic.data_affinity_regions'
+  - field: 'pubsub_topic.topic'
   - field: 'request_access'
   - field: 'restricted_export_config.enabled'
   - field: 'restricted_export_config.restrict_direct_table_access'
