Add CMEK support for Memorystore Instance (#14338)
[upstream:175b65b0023a7d21711fc84ed903c21071d7ef3c]

Signed-off-by: Modular Magician <magic-modules@google.com>

--- a/google-beta/services/memorystore/resource_memorystore_instance_generated_meta.yaml
+++ b/google-beta/services/memorystore/resource_memorystore_instance_generated_meta.yaml
@@ -48,6 +48,7 @@ fields:
   - field: 'gcs_source.uris'
   - field: 'instance_id'
     provider_only: true
+  - field: 'kms_key'
   - field: 'labels'
   - field: 'location'
     provider_only: true
