Added deletion Protection support for RegionalSecret (#14323)
[upstream:5e497f5fd8bb640a1cbb22d5e9ee20942d411e88]

Signed-off-by: Modular Magician <magic-modules@google.com>

--- a/google-beta/services/secretmanagerregional/resource_secret_manager_regional_secret_generated_meta.yaml
+++ b/google-beta/services/secretmanagerregional/resource_secret_manager_regional_secret_generated_meta.yaml
@@ -8,6 +8,8 @@ fields:
   - field: 'annotations'
   - field: 'create_time'
   - field: 'customer_managed_encryption.kms_key_name'
+  - field: 'deletion_protection'
+    provider_only: true
   - field: 'effective_annotations'
     provider_only: true
   - field: 'effective_labels'
