--- a/google-beta/services/compute/resource_compute_network_generated_meta.yaml
+++ b/google-beta/services/compute/resource_compute_network_generated_meta.yaml
@@ -20,6 +20,7 @@ fields:
     api_field: 'id'
   - field: 'network_profile'
   - field: 'numeric_id'
+  - field: 'params.resource_manager_tags'
   - field: 'routing_config.bgp_always_compare_med'
   - field: 'routing_config.bgp_best_path_selection_mode'
   - field: 'routing_config.bgp_inter_region_cost'
