--- a/google-beta/services/memorystore/resource_memorystore_instance_generated_meta.yaml
+++ b/google-beta/services/memorystore/resource_memorystore_instance_generated_meta.yaml
@@ -64,6 +64,7 @@ fields:
   - field: 'maintenance_schedule.schedule_deadline_time'
   - field: 'maintenance_schedule.start_time'
   - field: 'managed_backup_source.backup'
+  - field: 'managed_server_ca.ca_certs.certificates'
   - field: 'mode'
   - field: 'name'
   - field: 'node_config.size_gb'
