Add suspended field to dataplex data scan rules (#14167)
[upstream:25f30023f1cdb08aa80337accb36ba49b8eb076c]

Signed-off-by: Modular Magician <magic-modules@google.com>

--- a/google-beta/services/dataplex/resource_dataplex_datascan_generated_meta.yaml
+++ b/google-beta/services/dataplex/resource_dataplex_datascan_generated_meta.yaml
@@ -52,6 +52,7 @@ fields:
   - field: 'data_quality_spec.rules.statistic_range_expectation.statistic'
   - field: 'data_quality_spec.rules.statistic_range_expectation.strict_max_enabled'
   - field: 'data_quality_spec.rules.statistic_range_expectation.strict_min_enabled'
+  - field: 'data_quality_spec.rules.suspended'
   - field: 'data_quality_spec.rules.table_condition_expectation.sql_expression'
   - field: 'data_quality_spec.rules.threshold'
   - field: 'data_quality_spec.rules.uniqueness_expectation'
