Add kmskeyname to datastore (#14161)
[upstream:898f47c4fd9efd9d69094dc105f9ec42835abda7]

Signed-off-by: Modular Magician <magic-modules@google.com>

--- a/google-beta/services/discoveryengine/resource_discovery_engine_data_store_generated_meta.yaml
+++ b/google-beta/services/discoveryengine/resource_discovery_engine_data_store_generated_meta.yaml
@@ -27,6 +27,7 @@ fields:
   - field: 'document_processing_config.parsing_config_overrides.parsing_config_overrides.layout_parsing_config'
   - field: 'document_processing_config.parsing_config_overrides.parsing_config_overrides.ocr_parsing_config.use_native_text'
   - field: 'industry_vertical'
+  - field: 'kms_key_name'
   - field: 'location'
     provider_only: true
   - field: 'name'
